--- a/Сайт 2/Тест хтмл2.html
+++ b/Сайт 2/Тест хтмл2.html
@@ -66,7 +66,7 @@
                 <br>При погружении в задачу или проектировании интерфейса всегда
                 <br>смотрю с разных сторон на возможное решение. Могу переключаться
                 <br>на разные исследования, чтение доп. материалов или коммуникацию
-                <br>с другими членами команды, если в чем-то не уверен или чего-то не знаю.
+                <br>с другими членами команды, если в чем-то не уверен или чего-то не знаю
 
             </div>
         </div>    
