--- a/Сайт 2/Тест хтмл2.html
+++ b/Сайт 2/Тест хтмл2.html
@@ -11,6 +11,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="C:\Users\Vladislav\Documents\Программировыание\Test\test\Сайт 2\favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="C:\Users\Vladislav\Documents\Программировыание\Test\test\Сайт 2\favicon-16x16.png">
+        <link rel="manifest" href="C:\Users\Vladislav\Documents\Программировыание\Test\test\Сайт 2\site.webmanifest" />
     </head>
     <body>
         <div class="sticky">
@@ -66,7 +70,7 @@
                 <br>При погружении в задачу или проектировании интерфейса всегда
                 <br>смотрю с разных сторон на возможное решение. Могу переключаться
                 <br>на разные исследования, чтение доп. материалов или коммуникацию
-                <br>с другими членами команды, если в чем-то не уверен или чего-то не знаю
+                <br>с другими членами команды, если в чем-то не уверен или чего-то не знаю.
 
             </div>
         </div>    
