--- a/Тест хтмл2.html
+++ b/Тест хтмл2.html
@@ -42,7 +42,7 @@
         </div>
         <div class="photo">
             <div class="vertical-line"></div>
-            <img src="C:\Users\Vladislav\Downloads\CAGRb_mrKfY.jpg" alt="">
+            <img src="Pic\CAGRb_mrKfY.jpg" alt="">
             <div class="photo_name">
                 Владислав<br>Жемаев<br>
             </div>
