Добавление блока "Жизненный путь"

--- a/Тест хтмл2.html
+++ b/Тест хтмл2.html
@@ -63,16 +63,29 @@
                 <br>Если задача сложная и не имеет однозначного решения, обращаюсь к интернету.
             </div>
             <div class="skills_soft_text_sep"><p id="skills_soft_text_title">Эмоциональный интеллект</p>
-                <br>Исследую и стараюсь понять боли и эмоции пользователей.
-                <br>Ищу, как можно им помочь.
+                <br>Обладаю прекрасной способностью встать на место пользователя,
+                <br>прочувствовать его боль, посмотреть на задачу с его стороны.
+                <br>Ищу, как можно ему помочь.
             </div>
             <div class="skills_soft_text_sep"><p id="skills_soft_text_title">Когнитивная гибкость</p>
                 <br>При погружении в задачу или проектировании интерфейса всегда
                 <br>смотрю с разных сторон на возможное решение. Могу переключаться
                 <br>на разные исследования, чтение доп. материалов или коммуникацию
                 <br>с другими членами команды, если в чем-то не уверен или чего-то не знаю.
-
             </div>
-        </div>    
+        </div> 
+        <div class="life_path"> <p class="title_box">Жизненный путь</p></div>
+        <div class="life_path_box">
+            <div class="life_path_title">5 мая 1995</div>  
+            <div class="life_path_text"><p id="life_path_text_title">День рождения на свет</p>
+            </div>
+            <div class="life_path_title">2002 - 2013</div>  
+            <div class="life_path_text"><p id="life_path_text_title">Учился в среднеобразвательной школе №3
+               <br>города Яхрома Московской области</div>
+            <div class="life_path_title">2007 - 2012</div>  
+            <div class="life_path_text"><p id="life_path_text_title">Учил английский язык в центре по изучению языков LSC</p>
+                <br>Сдавал 3 экзмена из Кембриджа
+            </div>
+        </div>             
     </body>
 </html>
