Дополнил жизненный путь

--- a/Тест хтмл2.html
+++ b/Тест хтмл2.html
@@ -84,7 +84,25 @@
                <br>города Яхрома Московской области</div>
             <div class="life_path_title">2007 - 2012</div>  
             <div class="life_path_text"><p id="life_path_text_title">Учил английский язык в центре по изучению языков LSC</p>
-                <br>Сдавал 3 экзмена из Кембриджа
+                <br>Помимо внутренних эксаменов проходил и внешние: Key English Test,
+                <br>Preliminary English Test, First Certificate English. Имею сертификат, подтверждающий
+                <br>владение языком на уровне B2.
+            </div>
+            <div class="life_path_title">2013 - 2017</div>  
+            <div class="life_path_text"><p id="life_path_text_title">Поступил в Государственный университет Дубна
+                <br>на факультет "Экономика и управление"</p>
+                <br>Получил диплом по специальности "Государственное и муниципальное управление"
+            </div>
+            <div class="life_path_title">2016 - 2017</div>  
+            <div class="life_path_text"><p id="life_path_text_title">Работал в ОАО "Макдоналдс"</p>
+                <br>Устроился на работу по выходным, чтобы начать зарабатывать деньги,
+                <br>получить первый драгоценный опыт работы с людьми
+                <br>и понимание того, что лучше работать хотя бы где-то, чем не работать вовсе.
+            </div>
+            <div class="life_path_title">2017 - 2019</div> 
+            <div class="life_path_text"><p id="life_path_text_title">Поступил в магистратуру и сменил факультет
+                <br>на "Системный анализ и управление"</p>
+                <br>Получил диплом с отличием по специальности "Системный анализ"
             </div>
         </div>             
     </body>
